internal/octogo/testdata/17_switch_statements.ogo
func testSwitch() {
	// Valid switch with assignment guard
	switch val := 5 {
	case 1, 2, 3:
		var x int = val
		_ = x
	case 5:
		var y int = val
		_ = y
	default:
		var z int = 0
		_ = z
	}

	var state string = "idle"

	switch state {
	case "active":
		state = "done"
		// ERROR "cannot use.*type int.*as type string|type mismatch in case"
	case 404:
		state = "error"
	}
}
